--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 
     <script src="app.js" defer></script>
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
